Added duration and removed esc seq from colors
