# server/swagger_server/models/duration.py
@@ -1,0 +1,90 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class Duration(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, multiplicator: bool=None, value: int=None):  # noqa: E501
+        """Duration - a model defined in Swagger
+
+        :param multiplicator: The multiplicator of this Duration.  # noqa: E501
+        :type multiplicator: bool
+        :param value: The value of this Duration.  # noqa: E501
+        :type value: int
+        """
+        self.swagger_types = {
+            'multiplicator': bool,
+            'value': int
+        }
+
+        self.attribute_map = {
+            'multiplicator': 'multiplicator',
+            'value': 'value'
+        }
+
+        self._multiplicator = multiplicator
+        self._value = value
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'Duration':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The Duration of this Duration.  # noqa: E501
+        :rtype: Duration
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def multiplicator(self) -> bool:
+        """Gets the multiplicator of this Duration.
+
+
+        :return: The multiplicator of this Duration.
+        :rtype: bool
+        """
+        return self._multiplicator
+
+    @multiplicator.setter
+    def multiplicator(self, multiplicator: bool):
+        """Sets the multiplicator of this Duration.
+
+
+        :param multiplicator: The multiplicator of this Duration.
+        :type multiplicator: bool
+        """
+
+        self._multiplicator = multiplicator
+
+    @property
+    def value(self) -> int:
+        """Gets the value of this Duration.
+
+
+        :return: The value of this Duration.
+        :rtype: int
+        """
+        return self._value
+
+    @value.setter
+    def value(self, value: int):
+        """Sets the value of this Duration.
+
+
+        :param value: The value of this Duration.
+        :type value: int
+        """
+
+        self._value = value
